Credit Page WIP

--- a/capital-quest/src/app/globals.css
+++ b/capital-quest/src/app/globals.css
@@ -116,7 +116,8 @@ body {
 
 .grad {
   background-image: linear-gradient(#004977, #D03027);
-  
+
+}
 .mini-game {
   background-color: #003366;
   color: #fff;
@@ -136,3 +137,4 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
